Remove the button

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 <body>
 	<center>
 		<h1> Welcome to first DevOps learing </h1>
-		<button>Click here</button>
+		<button>
 	</center>
 </body>
 </html>
