Added new Codes

--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 	<center>
-		<h1> Welcome to first DevOps learing </h1>
-		<button>
+		<h1> Welcome to first DevOps learning </h1>
+		<button>Click here><button>
 	</center>
 </body>
 </html>
