--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title> Welcome to DevOps </title>
+	<title> Welcome to DevOps </title><button></button>
 </head>
 <body>
 	<center>
